# Veristar

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
config/: celebrities.yaml  news_feeds.yaml  roots.txt  source_grading.yaml
data/: README.md
data/examples/: sample.json
data/seed/: .gitkeep
docs/: ontology-schema.md  pipeline-architecture.md  safety-guidelines.md  service-design.md
docs/plans/: m1-ontology-plan.md  m2-wikidata-seed-plan.md  m2b-scope-merge-plan.md  m6a-query-api-plan.md
scripts/: collect_all.sh  gate.sh  refresh_seed.sh  server.sh
src/veristar/: README.md
src/veristar/api/: README.md  __init__.py  app.py  routes.py  schemas.py
src/veristar/api/templates/: _results.html  base.html  collect.html  entity.html  graph.html  index.html  qa.html  vault.html
src/veristar/db/: __init__.py  connection.py  migrate.py  pg_repository.py  schema.sql  targets_repository.py  vector_store.py
src/veristar/generate/: README.md  __init__.py  llm.py  qa.py  reconstructive.py
src/veristar/grading/: README.md  __init__.py
src/veristar/graph/: README.md  __init__.py  entity_linker.py  filters.py  merge.py  queries.py  repository.py
src/veristar/ingest/: README.md
src/veristar/ingest/collectors/: __init__.py  base.py  namuwiki.py  news.py  runner.py  sns_scraper.py  wikipedia.py  youtube.py
src/veristar/ingest/news/: extractor.py  pipeline.py  rss.py
src/veristar/ingest/search/: __init__.py  base.py  discover.py  domain_grading.py  naver.py
src/veristar/ingest/wikidata/: __init__.py  client.py  discover.py  mapper.py  mapping.py  seed.py  sparql.py
src/veristar/ingest/wikipedia/: alias_supplement.py  client.py
src/veristar/ontology/: README.md  __init__.py  enums.py  grading_map.py  graph.py  models.py  query.py
src/veristar/vault/: __init__.py  store.py
src/veristar/verify/: __init__.py  graph_sync.py  pipeline.py
tests/: README.md  conftest.py
tests/api/: conftest.py  test_api.py
tests/db/: test_db_unit.py  test_targets.py
tests/e2e/: test_browser.py
tests/generate/: test_qa.py  test_reconstructive.py
tests/graph/: conftest.py  test_merge.py  test_queries.py  test_repository.py
tests/ingest/: conftest.py  test_client.py  test_mapper.py  test_news_extractor.py  test_news_pipeline.py  test_news_rss.py  test_search_discover.py  test_search_grading.py  test_search_naver.py  test_seed.py  test_sparql.py  test_wikipedia_alias.py
tests/ingest/collectors/: test_collectors.py  test_load_targets.py  test_sns_youtube.py
tests/ontology/: conftest.py  test_graph_validation.py  test_models.py  test_query.py  test_sample_fixture.py
tests/vault/: test_store.py
tests/verify/: test_graph_sync.py  test_pipeline.py
vault/articles/: namuwiki-100.md  namuwiki-10cm.md  namuwiki-11-키티즈.md  namuwiki-13파운드.md  namuwiki-15.md  namuwiki-1ps.md  namuwiki-24k.md  namuwiki-27elephant.md  namuwiki-2am.md  namuwiki-2bic.md  namuwiki-2f.md  namuwiki-2nb.md  namuwiki-2ne1.md  namuwiki-2pm.md  namuwiki-2z.md  namuwiki-4-tomorrow.md  namuwiki-406호-프로젝트.md  namuwiki-5tion.md  namuwiki-82major.md  namuwiki-9001.md  namuwiki-919-23.md  namuwiki-ab-에비뉴.md  namuwiki-ab6ix.md  namuwiki-acid-eyes.md  namuwiki-adhd.md  namuwiki-aespa.md  namuwiki-all-ours.md  namuwiki-am8ic.md  namuwiki-aoa-블랙.md  namuwiki-aoa-크림.md  namuwiki-aoa.md  namuwiki-aria.md  namuwiki-arrc.md  namuwiki-artms.md  namuwiki-b1a4.md  namuwiki-baby-dont-cry.md  namuwiki-babymonster.md  namuwiki-bap.md  namuwiki-bb.md  namuwiki-bdu.md  (+2286 more)
