[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veristar"
version = "0.1.0"
description = "출처 등급으로 검증한 연예 지식그래프 + 콘텐츠 생성 시스템"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    # PostgreSQL + pgvector
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/veristar"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI는 Depends()/Query()를 인자 기본값에 두는 게 표준 관용구 (B008 오탐)
"src/veristar/api/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["veristar"]

[[tool.mypy.overrides]]
# psycopg3·pgvector는 타입 스텁이 없어 strict 완화 적용
module = ["veristar.db.*", "veristar.graph.entity_linker"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=veristar --cov-report=term-missing"

[tool.coverage.run]
source = ["veristar"]
omit = [
    # DB 모듈은 PostgreSQL 연결이 필요한 통합 레이어 — 별도 integration test로 관리
    "*/veristar/db/*",
]

[tool.coverage.report]
fail_under = 80
