[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veristar"
version = "0.1.0"
description = "출처 등급으로 검증한 연예 지식그래프 + 콘텐츠 생성 시스템"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "uvicorn>=0.29",
    # PostgreSQL + pgvector
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/veristar"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI는 Depends()/Query()를 인자 기본값에 두는 게 표준 관용구 (B008 오탐)
"src/veristar/api/routes.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["veristar"]

[[tool.mypy.overrides]]
# psycopg3·pgvector는 타입 스텁이 없어 strict 완화 적용
module = [
    "veristar.db.*",
    "veristar.graph.entity_linker",
    "veristar.ingest.wikidata.sparql",
    "veristar.ingest.wikidata.discover",
    "veristar.ingest.collectors.runner",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=veristar --cov-report=term-missing --ignore=tests/e2e"

[tool.coverage.run]
source = ["veristar"]
# E2E 서버(uvicorn 서브프로세스) 커버리지 합산을 위한 설정:
#   parallel=true → 프로세스별 .coverage.<host>.<pid> 로 분리 기록 후 combine
#   sigterm=true  → server.sh stop(SIGTERM) 시 서버 프로세스가 데이터 flush
# a1_coverage.pth 훅이 COVERAGE_PROCESS_START 설정 시 서버에서 자동 측정 시작.
parallel = true
sigterm = true
omit = [
    # DB·자동발견·파이프라인 스트리밍은 통합 레이어 (E2E/서버 테스트 대상)
    "*/veristar/db/*",
    "*/veristar/ingest/wikidata/sparql.py",
    "*/veristar/ingest/wikidata/discover.py",
    "*/veristar/ingest/collectors/runner.py",
]

[tool.coverage.report]
fail_under = 79
# 79%: routes.py의 PostgreSQL 전용 경로(rag_search PG path, pipeline SSE)는 통합 테스트 대상
